--- a/BadgerProgram/samplesserver/static/index.html
+++ b/BadgerProgram/samplesserver/static/index.html
@@ -9,7 +9,7 @@
 
         <!-- Bootstrap -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
+        <link rel="stylesheet" type="text/css" href="style.css">
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
         <!--[if lt IE 9]>
@@ -75,7 +75,7 @@
            <form id="course-form">
               <div class="form-group">
                 <label for="courseName">Course name</label>
-                <input type="text" class="form-control" id="courseName" placeholder="Course name" value="{{course.name}}">
+                <input type="text" class="form-control" id="courseName" required="true" placeholder="Course name" value="{{course.name}}">
               </div>
               <div class="form-group">
                 <label for="courseCode">Course code</label>
@@ -103,7 +103,7 @@
            <form id="instructor-form">
               <div class="form-group">
                 <label for="instructorName">Instructor name</label>
-                <input type="text" class="form-control" id="instructorName" placeholder="Instructor name" value="{{name}}" default="{{name}}">
+                <input type="text" class="form-control" id="instructorName" required="true" placeholder="Instructor name" value="{{name}}" default="{{name}}">
               </div>
               <div class="form-group">
                 <label for="instructorEmail">Instructor email</label>
@@ -118,7 +118,7 @@
             <form id="patient-form">
                 <div class="form-group">
                     <label for="patientCode">Patient code</label>
-                    <input type="text" class="form-control" id="patientCode" placeholder="Patient code" value="{{code}}" default="{{code}}">                
+                    <input type="text" class="form-control" required="true" id="patientCode" placeholder="Patient code" value="{{code}}" default="{{code}}">                
                 </div>
                 <button type="submit" class="btn btn-default" id="patient-submit">Submit</button>
             </form>
