--- a/BadgerProgram/samplesserver/static/index.html
+++ b/BadgerProgram/samplesserver/static/index.html
@@ -128,7 +128,8 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
         <!-- Include all compiled plugins (below), or include individual files as needed -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-        <script src="https://cdn.rawgit.com/visionmedia/page.js/master/page.js"></script>        
+        <script src="https://cdn.rawgit.com/visionmedia/page.js/master/page.js"></script>  
+           <script src="https://cdn.plot.ly/plotly-latest.js"></script>      
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.2.1/Chart.bundle.min.js"></script>        
         <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.min.js"></script>        
         <script src="/static/scripts.js"></script>
